<resources>
    <string name="app_name">Smack Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message_hint">message:</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">sign up here</string>
    <string name="username">username</string>
    <string name="tap_to_generate_an_avatar">Tap to generate an avatar</string>
    <string name="create_user">Create User</string>
    <string name="generate_background_color">Generate background color</string>

    <!--Json and headers keys-->
    <string name="email_json">email</string>
    <string name="password_json">password</string>
    <string name="content_type_json">application/json; charset=utf-8</string>
    <string name="token">token</string>
    <string name="user_json">user</string>
    <string name="name_json">name</string>
    <string name="avatar_name_json">avatarName</string>
    <string name="avatar_color_json">avatarColor</string>
    <string name="auth_header">Authorization</string>
    <string name="id_json">_id</string>
    <string name="form_error">Please fill in the form</string>
    <string name="error_message">Error occurred, please try again</string>
    <string name="logout">Logout</string>
    <string name="add_channel">Add channel</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="socket_add_channel_flag">newChannel</string>
    <string name="socket_channel_created_event_flag">channelCreated</string>
    <string name="description_json">description</string>
    <string name="socket_message_created_flag">messageCreated</string>
    <string name="user_image_icon">user image icon</string>
    <string name="parse_date_error_message">Cannot parse date</string>
</resources>
