<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_channel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/add_channel" />

    <EditText
        android:id="@+id/channel_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/channel_name"
        android:inputType="text"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/add_channel_tv" />

    <EditText
        android:id="@+id/channel_description_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/channel_description"
        android:inputType="text"
        android:textColor="@android:color/darker_gray" />
</LinearLayout>